fixed align and tactil problems

--- a/index.css
+++ b/index.css
@@ -158,7 +158,7 @@ body {
     align-items: center;
 }
 .section .info{
-    font-size: 1.2em;
+    font-size: 1.1em;
     animation: aparecer1 2s ease 1 both;
     
 }
@@ -344,7 +344,7 @@ body {
 }
 
 /* for tactil device */
-@media (max-width: 1024px) and (hover: none) {
+@media (max-width: 1024px) and (pointer: coarse) {
     #cursor {
         display: none;
         z-index: 0;
